# sv2-services

./: Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: rust-ci.yml  rust-lint.yml  rust-test.yml
examples/mining-client-cpu-miner/: Cargo.toml  README.md  config.toml
examples/mining-client-cpu-miner/src/: client.rs  config.rs  handler.rs  lib.rs  main.rs
examples/mining-client-cpu-miner/src/miner/: extended.rs  standard.rs
examples/mining-client-cpu-miner/tests/: test_one_extended_channel.rs  test_one_standard_channel.rs
examples/mining-server/: Cargo.toml  README.md  config.toml
examples/mining-server/src/: client.rs  config.rs  handler.rs  main.rs  server.rs
examples/sibling-io-communication/: Cargo.toml
examples/sibling-io-communication/src/: configs.rs  main.rs  mining_server_handler.rs  template_distribution_handler.rs
examples/template-distribution-client/: Cargo.toml  README.md  config.toml
examples/template-distribution-client/src/: client.rs  config.rs  handler.rs  main.rs
src/: lib.rs
src/client/service/: config.rs  error.rs  event.rs  mod.rs  outcome.rs  request.rs  response.rs  sibling.rs
src/client/service/subprotocols/: mod.rs
src/client/service/subprotocols/mining/: handler.rs  request.rs  response.rs  trigger.rs
src/client/service/subprotocols/template_distribution/: handler.rs  mod.rs  request.rs  trigger.rs
src/client/tcp/: encrypted.rs  unencrypted.rs
src/server/: mod.rs
src/server/service/: client.rs  config.rs  connection.rs  error.rs  event.rs  mod.rs  outcome.rs  request.rs  response.rs  sibling.rs
src/server/service/subprotocols/: mod.rs
src/server/service/subprotocols/mining/: handler.rs  trigger.rs
src/server/tcp/: encrypted.rs  unencrypted.rs
