[package]
name = "mining-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-stratum = { path = "../.." }
tokio = { version = "1", features = ["full", "tracing", "signal"] }
tokio-util = "0.7.15"
tracing = "0.1"
hex = "0.4.3"
tracing-subscriber = "0.3.19"
tower = { version = "0.4", features = ["util"] }
stratum-common = { git = "https://github.com/stratum-mining/stratum", branch = "v1.4.0" }
key-utils = { git = "https://github.com/stratum-mining/stratum", branch = "v1.4.0" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"

[dev-dependencies]
integration_tests_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "v1.4.0" }