[package]
name = "sibling-io-communication"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-stratum = { path = "../.." }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.15"
anyhow = "1.0.98"
tracing = "0.1.41"
stratum-common = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
hex = "0.4.3"
tracing-subscriber = "0.3.19"
integration_tests_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
